devcontainers/java8-podman/k8s/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: spring-boot-gateway
spec:
  selector:
    istio: ingressgateway # Default Istio ingress gateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: spring-boot-demo
spec:
  hosts:
  - "*"
  gateways:
  - spring-boot-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: spring-boot-demo
        port:
          number: 8080
